@startuml SoftSprintClass

' Stile Diagramma
skinparam classAttributeIconSize 10
skinparam classBorderThickness <3>
skinparam packageBorderThickness <4>
skinparam linetype ortho
top to bottom direction

class Utente {
    -db
    +login(string email,string password)
    } 

class Tavolo {
    -db
    +getTavoli()
    +setStato(int idTavolo, string stato)
    +getStato(int idTavolo)
    }

class Ordine {
    -db
    +creaOrdine(int idTavolo,Piatto[] piatti,string note)
    +getOrdiniAttivi()
    +cambiaStato(int idOrdine, string stato)
    +getPiattiDaOrdinare(int idTavolo)
    +getOrdiniPronti()
    }

class OrdinePiatto {
    -db
    +aggiungiPiatto(int idOrdine,int idPiatto,int qty)
    +getPiatti(int idOrdine)
    }

class Piatto {
    -db
    +getPiatto(int id)
    +getMenu()
    +aggiungiPiatto(string nome, string descrizione, float prezzo, string categoria, string img)
    +modificaPiatto(int id, string nome, string descrizione, float prezzo, string categoria, string img)
    +eliminaPiatto(int id)
    }

class Prenotazione {
    -db
    +getPrenotazioni()
    +aggiungiPrenotazione(string nome, string telefono, date data, int persone, string fascia_oraria)
    +modificaPrenotazione(int idPrenotazione, string nome, string telefono, date data, int persone, string fascia_oraria)
    +eliminaPrenotazione(int idPrenotazione)
    }
Utente  -->  Ordine
Ordine  -->  Tavolo
Ordine  -->  OrdinePiatto
Piatto  -->  OrdinePiatto

@enduml
